# See BAZEL.md for details on how to use bazel
workspace(name = "rust-dotenv")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file", "http_jar")


http_archive(
    name = "rules_rust",
    integrity = "sha256-vPcQEm9pdNwttW2exexMfGxOLFOwcotEw1t3CkgCS8k=",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.49.1/rules_rust-v0.49.1.tar.gz"],
)

########## Rust support ##########

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains", "rust_repository_set")

rules_rust_dependencies()

rust_versions = [
    "1.74.0",
]

rust_register_toolchains(
    edition = "2021",
    versions = rust_versions,
)

rust_repository_set(
    name = "rust_macos_arm64_linux_tuple",
    edition = "2021",
    exec_triple = "aarch64-apple-darwin",
    extra_target_triples = ["x86_64-unknown-linux-gnu"],
    versions = rust_versions,
)

rust_repository_set(
    name = "rust_macos_x86_64_linux_tuple",
    edition = "2021",
    exec_triple = "x86_64-apple-darwin",
    extra_target_triples = ["x86_64-unknown-linux-gnu"],
    versions = rust_versions,
)

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("@rules_rust//crate_universe:defs.bzl", "crate", "crates_repository")


crates_repository(
    name = "rust_crates",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:Cargo.bazel.lock",
    packages = {
        "dotenv": crate.spec(version = "0.15.0"),
    },
)

load("@rust_crates//:defs.bzl", "crate_repositories")

crate_repositories()

