load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "lib",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "@rust_crates//:dotenv",
    ],
)

rust_test(
   name = "unit",
   crate = "lib",
   rustc_env_files = ["//:.env"],
)
